# quickpass-desktop

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
.github/workflows/: tauri-build.yml  tauri-matrix.yml  tauri-release.yml
scripts/: gen-golden-vectors.mjs  golden-vectors.json  vectors.test.mjs
src/: App.jsx  App.test.jsx  core.js  core.test.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
