[package]
name = "quickpass_tauri"
version = "1.0.0"
description = "QuickPass desktop app"
authors = ["QuickPass"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
